added custom jvm args
Signed-off-by: Lazar Petrovic <lpetrovic05@gmail.com>