@@ -7,6 +7,7 @@ import edu.umd.cs.findbugs.annotations.NonNull;
 import java.security.NoSuchAlgorithmException;
 import java.security.NoSuchProviderException;
 import java.security.SecureRandom;
+import java.util.List;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.hiero.consensus.crypto.KeyGeneratingException;
@@ -42,6 +43,15 @@ public class CombinedOptimizationsExperiment {
                     .withConfigValue("event.creation.maxCreationRate", 0)
                     .withConfigValue("event.creation.creationAttemptRate", 1000)
                     .withConfigValue("broadcast.enableBroadcast", true);
+            final List<String> jvmArgs = List.of(
+                    "-XX:+UseZGC",
+                    "-XX:+ZGenerational",
+                    "-XX:+AlwaysPreTouch",
+                    "-XX:ConcGCThreads=4",
+                    "-XX:+DisableExplicitGC",
+                    "-Xms16g",
+                    "-Xmx16g"
+            );
 
             // Use ED25519 for faster signing
             final SecureRandom secureRandom;
@@ -52,6 +62,7 @@ public class CombinedOptimizationsExperiment {
                         node.keysAndCerts(KeysAndCertsGenerator.generate(
                                 node.selfId(), SigningSchema.ED25519, secureRandom, secureRandom));
                         node.withGcLogging();
+                        node.addJvmArgs(jvmArgs);
                     } catch (final NoSuchAlgorithmException | NoSuchProviderException | KeyGeneratingException e) {
                         throw new RuntimeException(e);
                     }
